# archive

./: .gitignore  CMakeLists.txt  archive.c  archive.h  build.bat  main.c  unarchive.c  unarchive.h
include/arch/: arch_errors.h  arch_types.h  archiver.h  unarchiver.h
include/archiver/: archiver.h  unarchiver.h
src/: arch_errors.c  archive.c  archive.h  archive_file.c  archive_file.h  archive_format.c  archive_format.h  archive_internal.c  archive_internal.h  archiver.c  file.c  file.h  unarchive.c  unarchive.h  unarchiver.c
src/core/: archive.c  archive.h  archive_header.c  archive_header.h  file_header.c  file_header.h
src/util/: file.c  file.h
tools/: arch.c  arch_main.c
